[package]
name = "inkview-eg"
version = "0.1.0"
edition = "2021"
description = "embedded-graphics-core driver for inkview-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkview = { path = "../inkview" }
embedded-graphics-core = "0.4.0"

[dev-dependencies]
embedded-graphics = "0.8.1"
anyhow = "1.0"

[features]
default = []
sdk-5-19 = ["inkview/sdk-5-19"]
sdk-6-5 = ["inkview/sdk-6-5"]
