[package]
name = "inkview-slint-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.9"
rgb = "0.8.37"
slint = { git = "https://github.com/slint-ui/slint", version = "1.4.0", default-features = false, features = ["compat-1-2", "std", "software-renderer-systemfonts", "renderer-software"] }
inkview = { path = "../inkview" }
inkview-slint = { path = "../inkview-slint" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", version = "1.4.0" }
