[package]
name = "inkview-slint"
version = "0.1.1"
edition = "2021"

description = "Slint backend for inkview-rs"

license = "MIT"
keywords = ["inkview", "pocketbook", "eink"]
repository = "https://github.com/simmsb/inkview-rs"
authors = ["Ben Simms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.11"
rgb = "0.8.52"
slint = { version = "1.13.1", default-features = false, features = ["compat-1-2", "std", "software-renderer-systemfonts", "renderer-software"] }
inkview = { path = "../inkview", version = "0.1.1" }

[features]
default = []
sdk-5-19 = ["inkview/sdk-5-19"]
sdk-6-5 = ["inkview/sdk-6-5"]
sdk-6-8 = ["inkview/sdk-6-8"]

[package.metadata.docs.rs]
features = ["sdk-6-8"]
