[package]
name = "inkview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.1"
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"

[features]
default = []
sdk-5-19 = ["_sdk_selected"]
sdk-6-5 = ["_sdk_selected"]
sdk-6-8 = ["_sdk_selected"]

_sdk_selected = []
