[package]
name = "inkview-slint-demo"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.11"
rgb = "0.8.52"
slint = { version = "1.14.1", default-features = false, features = ["compat-1-2", "std", "software-renderer-systemfonts", "renderer-software"] }
inkview = { path = "../../inkview", version = "0.2.0" }
inkview-slint = { path = "../../inkview-slint", version = "0.2.0" }

[build-dependencies]
slint-build = { version = "1.14.1" }

[features]
default = []
sdk-5-19 = ["inkview/sdk-5-19"]
sdk-6-5 = ["inkview/sdk-6-5"]
sdk-6-8 = ["inkview/sdk-6-8"]
